<resources>
    <string name="app_name">城管通</string>
    <string name="tip_double_click_exit">再次点击退出城管通</string>

    <!--登陆-->
    <string name="login_account_hit">请输入登录名</string>
    <string name="login_password_hit">请输入密码</string>
    <string name="login_upassword">更改密码</string>

    <!--主界面tab-->
    <string name="tab_one">养护管理</string>
    <string name="tab_two">巡查监控</string>
    <string name="tab_three">基础数据</string>
    <string name="tab_four">更多</string>

    <!--养护管理-->
    <string name="txt_commit">提交</string>

    <!--案件巡查-->
    <string name="Pager_one_title">巡查案件</string>
    <string name="Pager_two_tile">巡查打卡</string>
    <string name="Pager_three_title">特殊通知</string>


    <!-- 更多 -->
    <string name="title_more">更多信息</string>
    <string name="item_approval">审批</string>
    <string name="item_assess">考核</string>
    <string name="item_myinfo">我的信息</string>
    <string name="btn_logoff">注销</string>


    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="net_error">网络异常</string>
    <string name="title_activity_case_detials">CaseDetialsActivity</string>
    <string name="account_null_error">用户名不能为空</string>
    <string name="password_null_error">密码不能为空</string>
    <string name="session_error">登录过期，请重新登录</string>

    <!-- 任务单  -->
    <string name="task_down_pdf"><u>PDF文件下载</u></string>
    <string name="task_finish_pic">作业后照片</string>
    <string name="task_finish_content">作业内容</string>
    <string name="task_site_pic">现场照片</string>
    <string name="task_duration">工期:</string>
    <string name="task_report_unit">上报单位:</string>
    <string name="task_next_unit">下发单位:</string>
    <string name="task_pm">项目经理:</string>
    <string name="task_work_unit">作业单位:</string>
    <string name="task_res">资金来源:</string>

</resources>
