<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite">

        <RelativeLayout
            android:id="@+id/case_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/case_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ico_case" />

                <TextView
                    android:id="@+id/case_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tab_one"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/color82858b" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/notice_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/notice_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ico_notice" />

                <TextView
                    android:id="@+id/notice_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tab_two"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/color82858b" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/advertise_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/advertise_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ico_advertise" />

                <TextView
                    android:id="@+id/advertise_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tab_three"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/color82858b" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/more_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/more_image"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ico_more" />

                <TextView
                    android:id="@+id/more_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tab_four"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/color82858b" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>